--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   #Protect data
   envied: ^1.3.2
 
+  intl: ^0.20.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,3 +48,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: RobotoText
+      fonts:
+        - asset: fonts/roboto_text/Roboto-Regular.ttf
